Fix blank space to right on mobile

--- a/clubWebsite/static/stylesheets/hackathon.css
+++ b/clubWebsite/static/stylesheets/hackathon.css
@@ -224,7 +224,7 @@ main {
 }
 
 .schedule-box{
-    width:450px;
+    max-width: 450px;
 }
 
 
